Fix alignment of ellipsis and address in wallet view. (#3198)

--- a/ui/app/css/itcss/components/token-list.scss
+++ b/ui/app/css/itcss/components/token-list.scss
@@ -51,7 +51,7 @@ $wallet-balance-breakpoint-range: "screen and (min-width: #{$break-large}) and (
   &__balance-ellipsis {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    width: 100%;
   }
 
   &__ellipsis {
